Fix DetailView title contents from overflowing and not breaking (#357)
* Added word-wrap to DetailView title

* Added test case for overflow title text

* Added word-wrap for secondary and sub titles and their test

--- a/packages/terra-clinical-detail-view/src/DetailView.scss
+++ b/packages/terra-clinical-detail-view/src/DetailView.scss
@@ -21,11 +21,13 @@
     font-weight: normal;
     margin-bottom: 0.5rem;
     margin-top: 0;
+    word-wrap: break-word;
   }
 
   .secondary-text {
     font-size: 1.2857rem;
     margin-bottom: 0.7142857143rem;
+    word-wrap: break-word;
 
     ~ .subtitle {
       margin-top: 1.2857142857rem;
@@ -36,6 +38,7 @@
     color: var(--terra-detail-view-subtitle-color, #75767d);
     font-size: 1.1428571429rem;
     line-height: 1.4285714286;
+    word-wrap: break-word;
 
     ~ .subtitle {
       margin-top: 0;
